--- a/style.css
+++ b/style.css
@@ -146,6 +146,23 @@ justify-content: center;
 border: 1px solid;
 }
 
+.sobreEmpresa{
+display: flex;
+flex-direction: column;
+margin-top: 95px;
+background-color: rgb(230, 113, 113);
+height: 150;
+}
+
+.sobreEmpresa p{
+font-size: 30px;
+color: aliceblue;
+padding: auto;
+text-align: center;
+line-height: 50%;
+
+}
+
 footer{
   display: flex;
   width: 100%;
@@ -203,4 +220,15 @@ footer{
   display: flex;
   align-items: center;
   
+}
+
+.pagina-login{
+  background-color: rgb(230, 113, 113);
+
+
+}
+
+.login.html{
+background-color: blue;
+
 }
